--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,35 +1,3 @@
-/******************************************************************
-  Template Name: Male Fashion
-  Description: Male Fashion - ecommerce teplate
-  Author: Colorib
-  Author URI: https://www.colorib.com/
-  Version: 1.0
-  Created: Colorib 
-******************************************************************/
-
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Banner Section
-6.  Product Section
-7.  Intagram Section
-8.  Latest Section
-9.  Contact
-10.  Footer Style
--------------------------------------------------------------------*/
-
-/*----------------------------------------*/
-/* Template default CSS
-/*----------------------------------------*/
-
 html,
 body {
 	height: 100%;
@@ -61,57 +29,10 @@ img {
 	max-width: 100%;
 }
 
-input:focus,
-select:focus,
-button:focus,
-textarea:focus {
-	outline: none;
-}
-
-a,
-a:hover,
-a:focus {
-	text-decoration: none;
-	outline: none;
-	color: #ffffff;
-}
-
-ul,
-ol {
-	padding: 0;
-	margin: 0;
-}
-
-.section-title {
-	margin-bottom: 45px;
-	text-align: center;
-}
-
-.section-title span {
-	color: #e53637;
-	font-size: 14px;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-bottom: 15px;
-	display: block;
-}
-
-.section-title h2 {
-	color: #111111;
-	font-weight: 700;
-	line-height: 46px;
-}
-
 .set-bg {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: top center;
-}
-
-.spad {
-	padding-top: 100px;
-	padding-bottom: 100px;
 }
 
 .primary-btn {
@@ -123,85 +44,6 @@ ol {
 	color: #ffffff;
 	background: #000000;
 	letter-spacing: 4px;
-}
-
-.site-btn {
-	font-size: 14px;
-	color: #ffffff;
-	background: #111111;
-	font-weight: 700;
-	border: none;
-	text-transform: uppercase;
-	display: inline-block;
-	padding: 14px 30px;
-}
-
-.spacial-controls {
-	position: fixed;
-	width: 111px;
-	height: 91px;
-	top: 0;
-	right: 0;
-	z-index: 999;
-}
-
-.spacial-controls .search-switch {
-	display: block;
-	height: 100%;
-	padding-top: 30px;
-	background: #323232;
-	text-align: center;
-	cursor: pointer;
-}
-
-.search-model {
-	display: none;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background: #000;
-	z-index: 99999;
-}
-
-.search-model-form {
-	padding: 0 15px;
-}
-
-.search-model-form input {
-	width: 500px;
-	font-size: 40px;
-	border: none;
-	border-bottom: 2px solid #333;
-	background: 0 0;
-	color: #999;
-}
-
-.search-close-switch {
-	position: absolute;
-	width: 50px;
-	height: 50px;
-	background: #333;
-	color: #fff;
-	text-align: center;
-	border-radius: 50%;
-	font-size: 28px;
-	line-height: 28px;
-	top: 30px;
-	cursor: pointer;
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
 }
 
 .header {
@@ -244,10 +86,6 @@ ol {
 	letter-spacing: 2px;
 	margin-right: 28px;
 	display: inline-block;
-}
-
-.header-top_links a:last-child {
-	margin-right: 0;
 }
 
 .navbar-brand {
@@ -379,20 +217,9 @@ ol {
 	font-weight: 700;
 }
 
-
 .product__item {
 	overflow: hidden;
 	margin-bottom: 40px;
-}
-
-.product__item:hover .product__item__text a {
-	top: 22px;
-	opacity: 1;
-	visibility: visible;
-}
-
-.product__item:hover .product__item__text h6 {
-	opacity: 0;
 }
 
 .product__item__pic {
@@ -415,32 +242,15 @@ ol {
 	top: 20px;
 }
 
-.product__item__pic .product__hover {
-	position: absolute;
-	right: -200px;
-	top: 20px;
-	-webkit-transition: all, 0.8s;
-	-o-transition: all, 0.8s;
-	transition: all, 0.8s;
-}
-
 .product__item__text {
 	padding-top: 25px;
 	position: relative;
 }
 
-.product__item__text a {
+.product__item__text p {
 	font-size: 15px;
-	color: #e53637;
+	color: #616161;
 	font-weight: 700;
-	position: absolute;
-	left: 0;
-	top: 0;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
 }
 
 .product__item__text h6 {
@@ -448,9 +258,6 @@ ol {
 	font-size: 18px;
 	font-weight: 600;
 	margin-bottom: 5px;
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
 }
 
 .product__item__text h5 {
