--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,7 +16,7 @@
 <body class="d-flex flex-column">
     <nav class="navbar">
         <div class="container">
-            <span class="navbar-brand">StarSight</span>
+            <span class="navbar-brand text-white">StarSight</span>
             <div class="justify-content-end">
                 <% if (username) { %>
                     <div class="user-info">
@@ -37,12 +37,14 @@
                 <%= error %>
             </p>
             <% } %>
-                <form class="text-center" id="addForm" action="/admin/add" method="post" enctype="multipart/form-data">
+                <form class="text-center" id="addForm" action="/api/products/add" method="post"
+                    enctype="multipart/form-data">
                     <div class="form-group my-2">
                         <input type="text" name="name" class="form-control my-3" placeholder="name" required>
                     </div>
                     <div class="form-group my-2">
-                        <input type="text" name="description" class="form-control my-3" placeholder="description" required>
+                        <input type="text" name="description" class="form-control my-3" placeholder="description"
+                            required>
                     </div>
                     <div class="form-group my-2">
                         <input type="number" name="price" class="form-control my-3" placeholder="price" required>
@@ -54,18 +56,24 @@
                 </form>
     </div>
 
-    <div class="container my-4" id="users">
+    <div class="container my-4" id="products">
         <h3>Products</h3>
         <ol class="list-group">
             <% products.forEach(p=> { %>
                 <div class="row align-items-center">
-                    <li class="col-7 list-entry my-2">
+                    <li class="col-6 list-entry m-3 p-4">
                         <p>name: <%= p.name %>
                         </p>
                         <p>description: <%= p.description %>
                         </p>
                         <p>price: <%= p.price %>
                         </p>
+                        <p>images: </p>
+                        <div class="product-images">
+                            <img src="data:image/png;base64,<%= p.image[0].toString('base64') %>">
+                            <img src="data:image/png;base64,<%= p.image[1].toString('base64') %>">
+                            <img src="data:image/png;base64,<%= p.image[2].toString('base64') %>">
+                        </div>
                         <p>createdAt: <%= p.createdAt %>
                         </p>
                         <p>updatedAt: <%= p.updatedAt %>
@@ -74,15 +82,19 @@
 
                     <form class="col-5">
                         <div class="mb-3">
-                            <label class="form-label">Edit name:
+                            <div class="form-label">Edit name:
                                 <input type="text" class="form-control" id="updateName_<%= p._id%>">
-                            </label>
-                            <label class="form-label">Edit description:
+                            </div>
+                            <div class="form-label">Edit description:
                                 <input type="text" class="form-control" id="updateDesc_<%= p._id%>">
-                            </label>
-                            <label class="form-label">Edit price:
+                            </div>
+                            <div class="form-label">Edit price:
                                 <input type="number" class="form-control" id="updatePrice_<%= p._id%>">
-                            </label>
+                            </div>
+                            <div class="form-label">Edit images:
+                                <input type="file" name="images" class="form-control my-3" accept="image/*" multiple
+                                    required>
+                            </div>
                         </div>
                         <button type="button" class="btn btn-update" onclick="update('<%= p._id %>')">Update</button>
                         <button type="button" class="btn btn-danger"
