--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md">
+<nav class="navbar navbar-expand-md p-3">
     <div class="container">
         <div class="col-3">
             <span class="navbar-brand">StarSight</span>
@@ -8,18 +8,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse col-6" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="/home">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/products">Products</a>
                 </li>
             </ul>
         </div>
         <div class="col-3">
-            <div class="header-nav-option">
-                <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                <a href="#"><img src="img/icon/heart.png" alt=""></a>
-                <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
-            </div>
         </div>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         </div>
