--- a/views/products.ejs
+++ b/views/products.ejs
@@ -29,8 +29,8 @@
                                 Language
                             </button>
                             <div class="dropdown-menu" aria-labelledby="languageDropdown">
-                                <a class="dropdown-item" href="/home" data-lang="en">English</a>
-                                <a class="dropdown-item" href="/homeRu" data-lang="ru">Русский</a>
+                                <a class="dropdown-item" href="/products" data-lang="en">English</a>
+                                <a class="dropdown-item" href="/productsRu" data-lang="ru">Русский</a>
                             </div>
                         </div>
                     </div>
@@ -54,26 +54,38 @@
         </div>
 
         <%- include('navbar') %>
+        <hr class="m-0">
     </header>
 
-    <div class="hero">
-        <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="/img/hero-1.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
-                            <div class="hero__text">
-                                <h6>New Collection</h6>
-                                <h2>Spring Collection 2024</h2>
-                                <p>Explore the latest trends in eyewear with new collection. Our
-                                    curated selection showcases a blend of modern style and timeless elegance,
-                                    providing you with luxury essentials that stand out.</p>
-                                <a href="/products" class="primary-btn text-decoration-none">Shop now</a>
-                            </div>
-                        </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12 text-center mb-3">
+                <h3>New Arrivals</h3>
+            </div>
+        </div>
+        <div class="row">
+            <% if (products && products.length> 0) { %>
+                <% products.forEach((p)=> { %>
+            <div class="col-lg-3 col-md-6 col-sm-6">
+                <div class="product__item">
+                    <div class="owl-carousel product-images">
+                        <div class="product__item__pic set-bg" data-setbg="data:image/png;base64,<%= p.image[0].toString('base64') %>"></div>
+                        <div class="product__item__pic set-bg" data-setbg="data:image/png;base64,<%= p.image[1].toString('base64') %>"></div>
+                        <div class="product__item__pic set-bg" data-setbg="data:image/png;base64,<%= p.image[2].toString('base64') %>"></div>
+                    </div>
+                    <div class="product__item__text">
+                        <h6><%= p.name %></h6>
+                        <p><%= p.description %></p>
+                        <h5>$<%= p.price %></h5>
                     </div>
                 </div>
             </div>
+            <% }); %>
+            <% } else { %>
+                <div class="col-12 text-center">
+                    <p>No data available.</p>
+                </div>
+                <% } %>
         </div>
     </div>
 
