--- a/views/productsRu.ejs
+++ b/views/productsRu.ejs
@@ -29,8 +29,8 @@
                                 Язык
                             </button>
                             <div class="dropdown-menu" aria-labelledby="languageDropdown">
-                                <a class="dropdown-item" href="/home" data-lang="en">English</a>
-                                <a class="dropdown-item" href="/homeRu" data-lang="ru">Русский</a>
+                                <a class="dropdown-item" href="/products" data-lang="en">English</a>
+                                <a class="dropdown-item" href="/productsRu" data-lang="ru">Русский</a>
                             </div>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                                             <a class="gg-log-out nav-link" href="/logout"></a>
                                     </div>
                                     <% } else { %>
-                                        <a href="/">Войти</a>
+                                        <a href="/">SIGN IN</a>
                                         <% } %>
 
                             </div>
@@ -52,7 +52,6 @@
                 </div>
             </div>
         </div>
-
         <nav class="navbar navbar-expand-md">
             <div class="container">
                 <div class="col-3">
@@ -79,29 +78,49 @@
                 </div>
             </div>
         </nav>
+
+        <hr class="m-0">
     </header>
 
-    <div class="hero">
-        <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="/img/hero-1.jpg">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
-                            <div class="hero__text">
-                                <h6>Новая коллекция</h6>
-                                <h2>Весенняя Коллекция 2024</h2>
-                                <p>Познакомьтесь с последними тенденциями в области очков с новой коллекцией. Наш
-                                    тщательно подобранный ассортимент демонстрирует сочетание современного стиля и
-                                    неподвластной времени элегантности,
-                                    предоставляя вам предметы роскоши, которые выделяются на общем фоне.</p>
-                                <a href="/products" class="primary-btn text-decoration-none">Купить сейчас</a>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-12 text-center mb-3">
+                <h3>Новое Поступление</h3>
+            </div>
+        </div>
+        <div class="row">
+            <% if (products && products.length> 0) { %>
+                <% products.forEach((p)=> { %>
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="owl-carousel product-images">
+                                <div class="product__item__pic set-bg"
+                                    data-setbg="data:image/png;base64,<%= p.image[0].toString('base64') %>"></div>
+                                <div class="product__item__pic set-bg"
+                                    data-setbg="data:image/png;base64,<%= p.image[1].toString('base64') %>"></div>
+                                <div class="product__item__pic set-bg"
+                                    data-setbg="data:image/png;base64,<%= p.image[2].toString('base64') %>"></div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6>
+                                    <%= p.name %>
+                                </h6>
+                                <p>
+                                    <%= p.description %>
+                                </p>
+                                <h5>₽<%= p.price %>
+                                </h5>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
+                    <% }); %>
+                        <% } else { %>
+                            <div class="col-12 text-center">
+                                <p>Нет доступных данных.</p>
+                            </div>
+                            <% } %>
         </div>
-    </div>  
+    </div>
 
     <%- include('footer') %>
 
